--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^7.6.3",
     "react-scroll": "^1.9.3",
     "scroll": "^3.0.1",
+    "sweetalert": "^2.1.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
