--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.304",
     "react-router": "^7.6.3",
     "react-scroll": "^1.9.3",
     "scroll": "^3.0.1",
